# farming_simulator

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  README.md  player.yaml
bootstrap/: Main.cpp
config/: animations.cfg  maps.cfg  shaders.cfg  spritesheet.cfg  textures.cfg
data/: map.json  mapDef.yaml
data/Tilesets/: Fences.json  Grass.json  Hills.json  House Decoration.json  House.json  Objects.json  Paths.json  Plant Decoration.json  Water.json  interaction.json
graphics/animations/: animSptCharacter.yaml  character.yaml
graphics/shaders/: color.shader  default.shader
graphics/spritesheets/: sptCharacter.yaml
scripts/: generate_config.py  update_anim_format.py
src/: Game.cpp  Level.h  Overlay.h  Player.h  Settings.cpp  Settings.h  Sky.h  SoilLayer.h  Sprites.h  Transition.h  Tree.h
src/Core/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  Application.cpp  Application.h  GameObject.cpp  GameObject.h  Group.h  IApplicationListener.cpp  IApplicationListener.h  ILayer.h  LayerStack.cpp  LayerStack.h  RectUtils.h  ResourceLocator.h  ResourceManager.h  TextureAnimationSequence.cpp  TextureAnimationSequence.h  TextureManager.cpp  TextureManager.h  Timer.h
src/Game/: Level.h  Overlay.h  Player.h  Settings.cpp  Settings.h
tests/: CMakeLists.txt
tests/src/: test_example.cpp
